Fix: Office Control

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -20,6 +20,13 @@
         }
         return(false);
       }
+      // var initial = true
+      // window.onload = function () {
+      //   if (initial) {
+      //     initial = false
+      //     ntkoBrowser.openWindow('./editindex.html?cmd=2&url=' + getQueryVariable('url'))
+      //   }
+      // }
     </script>
   </body>
 </html>
